--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
     <link rel="apple-touch-icon" sizes="180x180" href="assets/imgages/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/imgages/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/imgages/favicon/favicon-16x16.png">
+    <!--CSS styling-->
+    <link rel="stylesheet" href="assets/css/style.css">
     <!--title of website-->
     <title>Clean Energy</title>
 </head>
 
 <body>
     <!--Header-->
-    <header>Header Element ee</header>
+    <header>Header Element</header>
     <!--Main content-->
     <main>Main Content</main>
     <!--Footer-->
