--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <!--more Metadata-->
-   <meta http-equiv="X-UA-Compatible" content="IE=7">
-   <meta name="description" content="Clean Energy is the solution to adaopt renewable enery sources like solar, wind, hydropower and biomass energy">
-   <meta name="keywords" content="clean-energy, sustainable, renewable, clean, solar, wind, hydropower, bio, applicable, environment friendly">
-   <meta name="Author" content="Mazen Al Ali">
-   <!--Favicon-->
+    <!--more Metadata-->
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta name="description"
+        content="Clean Energy is the solution to adaopt renewable enery sources like solar, wind, hydropower and biomass energy">
+    <meta name="keywords"
+        content="clean-energy, sustainable, renewable, clean, solar, wind, hydropower, bio, applicable, environment friendly">
+    <meta name="Author" content="Mazen Al Ali">
+    <!--Favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/imgages/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/imgages/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/imgages/favicon/favicon-16x16.png">
@@ -21,9 +23,14 @@
 
 <body>
     <!--Header-->
-    <header>Header Element</header>
+    <header>
+        <!--Navbar-->
+        <a href="index"><img src="assets/imgages/Clean_Energy_Logo-removebg-preview.png" alt="clean energy log"></a>
+    </header>
+
     <!--Main content-->
     <main>Main Content</main>
+
     <!--Footer-->
     <footer>Footer section</footer>
 
