--- a/index.html
+++ b/index.html
@@ -25,7 +25,17 @@
     <!--Header-->
     <header>
         <!--Navbar-->
-        <a href="index"><img src="assets/imgages/Clean_Energy_Logo-removebg-preview.png" alt="clean energy log"></a>
+        <a href="index.html"><img src="assets/imgages/Clean_Energy_Logo-removebg-preview.png" alt="clean energy log"></a>
+        <nav>
+            <ul>
+                <li><a href="index.html">Clean-Energy</a></li>
+                <li><a href="solar.html"></a>Solar</li>
+                <li><a href="wind.html"></a>Wind</li>
+                <li><a href="hydropower.html"></a>hydropower</li>
+                <li><a href="biomasse.html"></a>Bio</li>
+                <li><a href="signup.html"></a>Sign up</li>
+            </ul>
+        </nav>
     </header>
 
     <!--Main content-->
