Fix:put mMenu items in the anchor tag

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <nav>
             <ul>
                 <li><a href="index.html">Clean-Energy</a></li>
-                <li><a href="solar.html"></a>Solar</li>
-                <li><a href="wind.html"></a>Wind</li>
-                <li><a href="hydropower.html"></a>hydropower</li>
-                <li><a href="biomasse.html"></a>Bio</li>
-                <li><a href="signup.html"></a>Sign up</li>
+                <li><a href="solar.html">Solar</a></li>
+                <li><a href="wind.html">Wind</a></li>
+                <li><a href="hydropower.html">hydropower</a></li>
+                <li><a href="biomasse.html">Bio</a></li>
+                <li><a href="signup.html">Sign up</a></li>
             </ul>
         </nav>
     </header>
