Feat: Styling the logo image and the navigation menu, apply visual effect on active page

--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
     <!--Header-->
     <header>
         <!--Navbar-->
-        <a href="index.html"><img src="assets/imgages/Clean_Energy_Logo-removebg-preview.png" alt="clean energy log"></a>
+        <a href="index.html">
+            <img src="assets/imgages/Clean_Energy_Logo-removebg-preview.png" alt="clean energy log">
+        </a>
         <nav>
-            <ul>
-                <li><a href="index.html">Clean-Energy</a></li>
+            <ul id="menubar">
+                <li><a href="index.html" class="active-page">Clean-Energy</a></li>
                 <li><a href="solar.html">Solar</a></li>
                 <li><a href="wind.html">Wind</a></li>
                 <li><a href="hydropower.html">hydropower</a></li>
