Feat: Applying dropdwon on naviagtion bar using checkBox pseudo class

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         <a href="index.html">
             <img src="assets/imgages/Clean_Energy_Logo-removebg-preview.png" alt="clean energy log">
         </a>
+        <input type="checkbox" id="nav-menu-toggle" name="nav-menu-toggle">
+        <label for="nav-menu-toggle" class="nav-menu-label">X</label>
         <nav>
             <ul id="menubar">
                 <li><a href="index.html" class="active-page">Clean-Energy</a></li>
