--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <img src="assets/imgages/clean-energy-logo-no-bg.png" alt="clean energy log">
         </a>
         <input type="checkbox" id="nav-menu-toggle" name="nav-menu-toggle">
-        <label for="nav-menu-toggle" class="nav-menu-label">X</label>
+        <label for="nav-menu-toggle" class="nav-menu-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menubar">
                 <li><a href="index.html" class="active-page">Clean-Energy</a></li>
@@ -46,7 +46,26 @@
     <main>Main Content</main>
 
     <!--Footer-->
-    <footer>Footer section</footer>
+    <footer>
+        <!-- Adding social media icons from font aweosome website-->
+        <ul>
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit facebook page (open in new page)">
+                <i class="fa-brands fa-square-facebook"></i>
+            </a></li>
+            <li><a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="Visit youtube page (open in new page)">
+                <i class="fa-brands fa-square-youtube"></i>
+            </a></li>
+            <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="Visit twitter page (open in new page)">
+                <i class="fa-brands fa-square-twitter"></i>
+            </a></li>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit instagram page (open in new page)">
+                <i class="fa-brands fa-square-instagram"></i>
+            </a></li>
+        </ul>
+    </footer>
+
+    <!--Adding font Awesome-->
+  <script src="https://kit.fontawesome.com/176b15ee89.js" crossorigin="anonymous"></script>
 
 </body>
 
