--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!--Footer-->
     <footer>
         <!-- Adding social media icons from font aweosome website-->
-        <ul>
+        <ul id="social-media-links">
             <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit facebook page (open in new page)">
                 <i class="fa-brands fa-square-facebook"></i>
             </a></li>
