Feat: create other html pages solar, wind, hydro. Remove Bio HTML page. Rename sign up to Join us page

--- a/wind.html
+++ b/wind.html
@@ -32,17 +32,17 @@
         <label for="nav-menu-toggle" class="nav-menu-label"><i class="fa-solid fa-bars"></i></label>
         <nav>
             <ul id="menubar">
-                <li><a href="index.html" class="active-page">Clean-Energy</a></li>
-                <li><a href="solar.html">Solar</a></li>
-                <li><a href="wind.html">Wind</a></li>
+                <li><a href="index.html">Clean-Energy</a></li>
+                <li><a href="solar.html" >Solar</a></li>
+                <li><a href="wind.html" class="active-page">Wind</a></li>
                 <li><a href="hydropower.html">Hydropower</a></li>
-                <li><a href="joinus.html">Sign up</a></li>
+                <li><a href="joinus.html">Join us</a></li>
             </ul>
         </nav>
     </header>
 
     <!--Main content-->
-    <main>Main Content</main>
+    <main>Wind Energy</main>
 
     <!--Footer-->
     <footer>
