Fix: Correcting the text of  sign up html in the index page to Join us

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li><a href="solar.html">Solar</a></li>
                 <li><a href="wind.html">Wind</a></li>
                 <li><a href="hydropower.html">Hydropower</a></li>
-                <li><a href="joinus.html">Sign up</a></li>
+                <li><a href="joinus.html">Join us</a></li>
             </ul>
         </nav>
     </header>
