Feat: add hero image to the main age with cover text

--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
     </header>
 
     <!--Main content-->
-    <main>Main Content</main>
+    <main>
+        <section id="clean-energy-hero-img">
+            <h1>Clean Energy</h1>
+            <p>Sustainability can be reached out when all efforts collaborate together to get the most of planet natural and renewable sources</p>
+        </section>
+    </main>
 
     <!--Footer-->
     <footer>
