Feat: Styling cover text on Hero imaagee

--- a/index.html
+++ b/index.html
@@ -44,8 +44,11 @@
     <!--Main content-->
     <main>
         <section id="clean-energy-hero-img">
-            <h1>Clean Energy</h1>
+            <div id="home-pg-cover-txt">
+                <h1>Clean Energy</h1>
             <p>Sustainability can be reached out when all efforts collaborate together to get the most of planet natural and renewable sources</p>
+            </div>
+            
         </section>
     </main>
 
