Fix: Changing color them to test the contrast issue, adding some text content to home page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!--more Metadata-->
     <meta http-equiv="X-UA-Compatible" content="IE=7">
     <meta name="description"
-        content="Clean Energy is the solution to adaopt renewable enery sources like solar, wind, hydropower and biomass energy">
+        content="Clean Energy is the solution to adapt renewable enery sources like solar, wind, hydropower and biomass energy">
     <meta name="keywords"
         content="clean-energy, sustainable, renewable, clean, solar, wind, hydropower, bio, applicable, environment friendly">
     <meta name="Author" content="Mazen Al Ali">
@@ -43,13 +43,30 @@
 
     <!--Main content-->
     <main>
+        <!--hero image with cover text-->
         <section id="clean-energy-hero-img">
             <div id="home-pg-cover-txt">
                 <h1>Clean Energy</h1>
-            <p>Sustainability can be reached out when all efforts collaborate together to get the most of planet natural and renewable sources</p>
+                <p>Sustainability can be reached out when all efforts collaborate together to get the most of planet natural and renewable sources</p>
             </div>
-            
         </section>
+        <!--clean energy forms-->
+        <section id="clean-energy-forms">
+            <div id="sola-en-circle">
+                <h2>Solar</h2>
+                <p>most availbe and widly used</p>
+            </div>
+            <div id="wind-en-circle">
+                <h2>Wind</h2>
+                <p>Not only on land, but also off shore</p>
+            </div>
+            <div id="hydropower-en-circle">
+                <h2>Hydropower</h2>
+                <p>best use of natural sources</p>
+            </div>
+        </section>
+
+
     </main>
 
     <!--Footer-->
