Feat:Add section to home page and styling it to different devices

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li><a href="index.html" class="active-page">Clean-Energy</a></li>
                 <li><a href="solar.html">Solar</a></li>
                 <li><a href="wind.html">Wind</a></li>
-                <li><a href="hydropower.html">Hydropower</a></li>
+                <li><a href="hydropower.html">Hydro</a></li>
                 <li><a href="joinus.html">Join us</a></li>
             </ul>
         </nav>
@@ -46,27 +46,39 @@
         <!--hero image with cover text-->
         <section id="clean-energy-hero-img">
             <div id="home-pg-cover-txt">
-                <h1>Clean Energy</h1>
+                <h1 class="center-vertically">Clean Energy</h1>
                 <p>Sustainability can be reached out when all efforts collaborate together to get the most of planet natural and renewable sources</p>
             </div>
         </section>
-        <!--clean energy forms-->
-        <section id="clean-energy-forms">
-            <div id="sola-en-circle">
-                <h2>Solar</h2>
-                <p>most availbe and widly used</p>
+        <!--clean energy sources-->
+        <section id="clean-energy-sources">
+            <div>
+                <h2 class="title-center make-title-bolder">Clean Energy Sources</h2>
             </div>
-            <div id="wind-en-circle">
-                <h2>Wind</h2>
-                <p>Not only on land, but also off shore</p>
-            </div>
-            <div id="hydropower-en-circle">
-                <h2>Hydropower</h2>
-                <p>best use of natural sources</p>
+            <div id="energy-forms-container">
+                <div class="solar-en-circle">
+                    <a href="solar.html" class="source-clickable">
+                        <h3 class="source-title">Solar</h3>
+                    </a>
+                    <p class="normal-txt">most available and widly used</p>
+                    <a href="solar.html" class="sources-read-more-btn">Read more</a>
+                </div>
+                <div class="wind-en-circle">
+                    <a href="wind.html" class="source-clickable">
+                        <h3 class="source-title">Wind</h3>
+                    </a>
+                    <p class="normal-txt">Not only on land, but also off shore</p>
+                    <a href="wind.html" class="sources-read-more-btn">Read more</a>
+                </div>
+                <div class="hydropower-en-circle">
+                    <a href="hydropower.html" class="source-clickable">
+                        <h3 class="source-title">Hydro</h3>
+                    </a>
+                    <p class="normal-txt">best use of natural sources</p>
+                    <a href="hydropower.html" class="sources-read-more-btn">Read more</a>
+                </div>
             </div>
         </section>
-
-
     </main>
 
     <!--Footer-->
