Feat:Add content section to home page and make it responsive, applying the new color theme

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div>
                 <h2 class="title-center make-title-bolder">Clean Energy Sources</h2>
             </div>
-            <div id="energy-forms-container">
+            <div id="energy-sources-container">
                 <div class="solar-en-circle">
                     <a href="solar.html" class="source-clickable">
                         <h3 class="source-title">Solar</h3>
@@ -77,6 +77,28 @@
                     <p class="normal-txt">best use of natural sources</p>
                     <a href="hydropower.html" class="sources-read-more-btn">Read more</a>
                 </div>
+            </div>
+        </section>
+        <!--Why clean energy and application fields-->
+        <section id="reasons-appliction-fields">
+            <div id="why-clean-energy">
+                <h2 class="title-center make-title-bolder">It is good for</h2>
+                <ul class="reasons-and-applications">
+                    <li>reduce CO <sub>2</sub> emissions</li>
+                    <li>fight against global warming</li>
+                    <li>reducing high costs of energy consumption from unclean resouces</li>
+                    <li>other reason</li>
+                </ul>
+            </div>
+            <div id="application-fields">
+                <h2 class="title-center make-title-bolder">Application Fields</h2>
+                <ul class="reasons-and-applications">
+                    <li>Commercial use like in factories</li>
+                    <li>Vehicles</li>
+                    <li>Domestic usage</li>
+                    <li>Clearing water</li>
+                    <li>other fields</li>
+                </ul>
             </div>
         </section>
     </main>
