Feat: Add a media source in iframe to the home page

--- a/index.html
+++ b/index.html
@@ -101,6 +101,14 @@
                 </ul>
             </div>
         </section>
+        <!-- Video about the green energy and consequences of keep using dirty energy-->
+        <section id="green-enery-video">
+            <div>
+                <h2 class="title-center make-title-bolder">Which sources are the most sustainable?</h2>
+                <iframe src="https://www.youtube.com/embed/Ms--0d7Oh0s?si=i5DNVLDSFqNsPSzr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            
+        </section>
     </main>
 
     <!--Footer-->
