--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--more Metadata-->
-    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description"
         content="Clean Energy is the solution to adapt renewable enery sources like solar, wind, hydropower and biomass energy">
     <meta name="keywords"
