Update: writing real content to the home page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section id="clean-energy-hero-img">
             <div id="home-pg-cover-txt">
                 <h1 class="center-vertically">Clean Energy</h1>
-                <p>Sustainability can be reached out when all efforts collaborate together to get the most of planet natural and renewable sources</p>
+                <p>A more robust and environmentally friendly future is made possible by clean energy, which is sustainable, clean, renewable, and effectively utilised</p>
             </div>
         </section>
         <!--clean energy sources-->
@@ -60,21 +60,21 @@
                     <a href="solar.html" class="source-clickable">
                         <h3 class="source-title">Solar</h3>
                     </a>
-                    <p class="normal-txt">most available and widly used</p>
+                    <p class="normal-txt">Harvesting sunlight, powering tomorrow</p>
                     <a href="solar.html" class="sources-read-more-btn">Read more</a>
                 </div>
                 <div class="wind-en-circle">
                     <a href="wind.html" class="source-clickable">
                         <h3 class="source-title">Wind</h3>
                     </a>
-                    <p class="normal-txt">Not only on land, but also off shore</p>
+                    <p class="normal-txt">Capturing wind's power through elegant turbines</p>
                     <a href="wind.html" class="sources-read-more-btn">Read more</a>
                 </div>
                 <div class="hydropower-en-circle">
                     <a href="hydropower.html" class="source-clickable">
                         <h3 class="source-title">Hydro</h3>
                     </a>
-                    <p class="normal-txt">best use of natural sources</p>
+                    <p class="normal-txt">Nature's flow for clean hydroelectric power</p>
                     <a href="hydropower.html" class="sources-read-more-btn">Read more</a>
                 </div>
             </div>
@@ -84,20 +84,23 @@
             <div id="why-clean-energy">
                 <h2 class="title-center make-title-bolder">It is good for</h2>
                 <ul class="reasons-and-applications">
-                    <li>reduce CO <sub>2</sub> emissions</li>
-                    <li>fight against global warming</li>
-                    <li>reducing high costs of energy consumption from unclean resouces</li>
-                    <li>other reason</li>
+                    <li>Environmental Sustainability</li>
+                    <li>Reduced Air Pollution</li>
+                    <li>Lower Energy Costs</li>
+                    <li>Resource Conservation</li>
+                    <li>Resilience to Climate Change</li>
+                    <li>Renewable Resources:</li>
                 </ul>
             </div>
             <div id="application-fields">
                 <h2 class="title-center make-title-bolder">Application Fields</h2>
                 <ul class="reasons-and-applications">
-                    <li>Commercial use like in factories</li>
-                    <li>Vehicles</li>
-                    <li>Domestic usage</li>
-                    <li>Clearing water</li>
-                    <li>other fields</li>
+                    <li>Industrial Processes</li>
+                    <li>Industrial Processes</li>
+                    <li>Agriculture</li>
+                    <li>Transportation</li>
+                    <li>Water Treatment and Desalination</li>
+                    <li>Remote and Off-Grid Areas</li>
                 </ul>
             </div>
         </section>
