Fix: correct alle texts and styles of home page and test them

--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
                     <a href="wind.html" class="source-clickable">
                         <h3 class="source-title">Wind</h3>
                     </a>
-                    <p class="normal-txt">Capturing wind's power through elegant turbines</p>
+                    <p class="normal-txt">Capturing wind's power with turbines</p>
                     <a href="wind.html" class="sources-read-more-btn">Read more</a>
                 </div>
                 <div class="hydropower-en-circle">
                     <a href="hydropower.html" class="source-clickable">
                         <h3 class="source-title">Hydro</h3>
                     </a>
-                    <p class="normal-txt">Nature's flow for clean hydroelectric power</p>
+                    <p class="normal-txt">Nature's flow for clean hydro power</p>
                     <a href="hydropower.html" class="sources-read-more-btn">Read more</a>
                 </div>
             </div>
@@ -82,7 +82,7 @@
         <!--Why clean energy and application fields-->
         <section id="reasons-appliction-fields">
             <div id="why-clean-energy">
-                <h2 class="title-center make-title-bolder">It is good for</h2>
+                <h2 class="title-center make-title-bolder">Clean Energy is good for</h2>
                 <ul class="reasons-and-applications">
                     <li>Environmental Sustainability</li>
                     <li>Reduced Air Pollution</li>
@@ -93,7 +93,7 @@
                 </ul>
             </div>
             <div id="application-fields">
-                <h2 class="title-center make-title-bolder">Application Fields</h2>
+                <h2 class="title-center make-title-bolder">Application Fields includex </h2>
                 <ul class="reasons-and-applications">
                     <li>Industrial Processes</li>
                     <li>Industrial Processes</li>
