Feat: add hero images with corresponding cover text for other pages

--- a/hydropower.html
+++ b/hydropower.html
@@ -42,7 +42,15 @@
     </header>
 
     <!--Main content-->
-    <main>Hydropower Energy</main>
+    <main>
+        <!--hero image with cover text-->
+        <section id="hydro-energy-hero-img">
+            <div id="home-pg-cover-txt">
+                <h1 class="center-vertically">Hydro Energy</h1>
+                <p>Our transition to a sustainable future is made possible by the grace of hydroelectric ingenuity, which harnesses the force of rushing rivers</p>
+            </div>
+        </section>
+    </main>
 
     <!--Footer-->
     <footer>
