--- a/joinus.html
+++ b/joinus.html
@@ -42,7 +42,15 @@
     </header>
 
     <!--Main content-->
-    <main>Join us</main>
+    <main>
+        <!--hero image with cover text-->
+        <section id="join-us-hero-img">
+            <div id="home-pg-cover-txt">
+                <h1 class="center-vertically">Join us</h1>
+                <p>Together to enhance and encourage more use of green, sustainable and renewable energy</p>
+            </div>
+        </section>
+    </main>
 
     <!--Footer-->
     <footer>
