--- a/solar.html
+++ b/solar.html
@@ -42,7 +42,15 @@
     </header>
 
     <!--Main content-->
-    <main>Solar Energy</main>
+    <main>
+         <!--hero image with cover text-->
+        <section id="solar-energy-hero-img">
+            <div id="home-pg-cover-txt">
+                <h1 class="center-vertically">Solar Energy</h1>
+                <p>Unleashing the power of the sun, solar energy illuminates a sustainable tomorrow</p>
+            </div>
+        </section>
+    </main>
 
     <!--Footer-->
     <footer>
