--- a/wind.html
+++ b/wind.html
@@ -42,7 +42,15 @@
     </header>
 
     <!--Main content-->
-    <main>Wind Energy</main>
+    <main>
+           <!--hero image with cover text-->
+           <section id="wind-energy-hero-img">
+            <div id="home-pg-cover-txt">
+                <h1 class="center-vertically">Wind Energy</h1>
+                <p>Capturing the whispers of the wind, our journey toward a cleaner tomorrow unfolds with the grace of wind energy</p>
+            </div>
+        </section>
+    </main>
 
     <!--Footer-->
     <footer>
