Feat: Add content to solar, wind and hydro power pages with styles

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <!--clean energy sources-->
         <section id="clean-energy-sources">
             <div>
-                <h2 class="title-center make-title-bolder">Clean Energy Sources</h2>
+                <h2 class="title-center make-title-bolder top-bottom-margin">Clean Energy Sources</h2>
             </div>
             <div id="energy-sources-container">
                 <div class="solar-en-circle">
