--- a/solar.html
+++ b/solar.html
@@ -50,6 +50,22 @@
                 <p>Unleashing the power of the sun, solar energy illuminates a sustainable tomorrow</p>
             </div>
         </section>
+        <!--how it works?-->
+        <section id="how-it-works">
+            <div class="title-center make-title-bolder top-bottom-margin">
+                <h2>How it work?</h2>
+            </div>
+                <p> The process of using solar energy involves <strong>collecting 
+                    solar radiation and turning it 
+                    into heat or useful electricity.</strong> 
+                    The two primary methods of harnessing 
+                    solar energy are <strong>Photovoltaic (PV) systems </strong> for electricity
+                    generation and <strong>Solar thermal systems</strong>  for heat production.
+                </p>
+                <div class="working-mechanism-container solar-img"></div>
+            <div>
+            </div>
+        </section>
     </main>
 
     <!--Footer-->
