--- a/wind.html
+++ b/wind.html
@@ -50,6 +50,19 @@
                 <p>Capturing the whispers of the wind, our journey toward a cleaner tomorrow unfolds with the grace of wind energy</p>
             </div>
         </section>
+        <!--how it works?-->
+        <section id="how-it-works">
+            <div class="title-center make-title-bolder top-bottom-margin">
+                <h2>How it work?</h2>
+            </div>
+                <p> Wind turbines work by converting the kinetic energy 
+                    of the wind into mechanical energy, which is then
+                    transformed into electrical energy.
+                </p>
+                <div class="working-mechanism-container windturbine-img"></div>
+            <div>
+            </div>
+        </section>
     </main>
 
     <!--Footer-->
