Feat: Add media queries for mobile and laptops

--- a/solar.html
+++ b/solar.html
@@ -55,7 +55,7 @@
             <div class="title-center make-title-bolder top-bottom-margin">
                 <h2>How it work?</h2>
             </div>
-                <p> The process of using solar energy involves <strong>collecting 
+                <p class="descriptioin-txt text-center"> The process of using solar energy involves <strong>collecting 
                     solar radiation and turning it 
                     into heat or useful electricity.</strong> 
                     The two primary methods of harnessing 
