--- a/wind.html
+++ b/wind.html
@@ -55,7 +55,7 @@
             <div class="title-center make-title-bolder top-bottom-margin">
                 <h2>How it work?</h2>
             </div>
-                <p> Wind turbines work by converting the kinetic energy 
+                <p class="descriptioin-txt text-center"> Wind turbines work by converting the kinetic energy 
                     of the wind into mechanical energy, which is then
                     transformed into electrical energy.
                 </p>
