Feat: Add solar system components to html

--- a/solar.html
+++ b/solar.html
@@ -43,7 +43,7 @@
 
     <!--Main content-->
     <main>
-         <!--hero image with cover text-->
+        <!--hero image with cover text-->
         <section id="solar-energy-hero-img">
             <div id="home-pg-cover-txt">
                 <h1 class="center-vertically">Solar Energy</h1>
@@ -55,15 +55,119 @@
             <div class="title-center make-title-bolder top-bottom-margin">
                 <h2>How it work?</h2>
             </div>
-                <p class="descriptioin-txt text-center"> The process of using solar energy involves <strong>collecting 
-                    solar radiation and turning it 
-                    into heat or useful electricity.</strong> 
-                    The two primary methods of harnessing 
-                    solar energy are <strong>Photovoltaic (PV) systems </strong> for electricity
-                    generation and <strong>Solar thermal systems</strong>  for heat production.
-                </p>
-                <div class="working-mechanism-container solar-img"></div>
+            <p class="descriptioin-txt text-center"> The process of using solar energy involves <strong>collecting
+                    solar radiation and turning it
+                    into heat or useful electricity.</strong>
+                The two primary methods of harnessing
+                solar energy are <strong>Photovoltaic (PV) systems </strong> for electricity
+                generation and <strong>Solar thermal systems</strong> for heat production.
+            </p>
+            <div class="working-mechanism-container solar-img"></div>
             <div>
+            </div>
+        </section>
+        <!--Components of selected system-->
+        <section id="system-components">
+            <div class="title-center make-title-bolder top-bottom-margin">
+                <h2>Solar System Components</h2>
+            </div>
+            <!--table with two columns part on left description on the right-->
+            <div>
+                <div>
+                    <h3>For Photovoltaic (PV) systems</h3>
+                    <table id="components-table">
+                        <thead>
+                            <tr>
+                                <td>Element</td>
+                                <td>Description</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Solar Panels (Photovoltaic Cells)</td>
+                                <td>Individual silicon or other semiconductor-based
+                                    solar cells make up photovoltaic (PV) modules.
+                                    By using the photovoltaic effect, these cells
+                                    turn sunlight into electricity.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Inverter</td>
+                                <td>A key part of PV systems is the inverter.
+                                    It transforms the solar panels' direct current (DC)
+                                    into alternating current (AC), the common type of
+                                    electricity utilised in homes and businesses.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Mounting Structure</td>
+                                <td>A framework provides support for the solar panels,
+                                    holding them in place and facilitating their optimal
+                                    orientation and tilt to maximise sunshine exposure.
+                                    Mounting structures come in three varieties: fixed,
+                                    movable, and sun-tracking tracking systems.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Batteries</td>
+                                <td>Batteries are frequently a part of off-grid solar systems
+                                    in order to store extra electricity produced during sunny
+                                    spells. These batteries hold energy so they can be used
+                                    at night or on overcast days, when sunshine isn't available.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Monitoring and Control Systems</td>
+                                <td>Real-time data on the solar energy system's operation,
+                                    including energy generation, system efficiency, and
+                                    possible problems, is provided by monitoring devices.
+                                    Control systems can automate specific tasks to maximise energy harvesting and system
+                                    efficiency.</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div>
+                    <h3>For Solar thermal systems</h3>
+                    <table id="components-table">
+                        <thead>
+                            <tr>
+                                <td>Element</td>
+                                <td>Description</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Solar Thermal Collectors</td>
+                                <td>Solar thermal collectors are used in
+                                    solar thermal systems to capture sunlight
+                                    and convert it into heat. These collectors
+                                    come in various types, including flat-plate
+                                    collectors, concentrating collectors, and evacuated
+                                    tube collectors
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Heat Exchanger</td>
+                                <td>In solar thermal systems, a heat exchanger
+                                    transfers the heat collected by the solar thermal
+                                    collectors to a fluid, typically water or a heat-transfer
+                                    fluid. This heated fluid is then used for various applications,
+                                    such as space heating or generating steam for electricity production
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Pump </td>
+                                <td>Solar thermal systems may include a pump
+                                    to circulate the heat-transfer fluid between
+                                    the collector and the heat exchanger.
+                                    This ensures a continuous and efficient transfer
+                                    of heat.
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </section>
     </main>
@@ -72,23 +176,27 @@
     <footer>
         <!-- Adding social media icons from font aweosome website-->
         <ul id="social-media-links">
-            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit facebook page (open in new page)">
-                <i class="fa-brands fa-square-facebook"></i>
-            </a></li>
-            <li><a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="Visit youtube page (open in new page)">
-                <i class="fa-brands fa-square-youtube"></i>
-            </a></li>
-            <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="Visit twitter page (open in new page)">
-                <i class="fa-brands fa-square-twitter"></i>
-            </a></li>
-            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit instagram page (open in new page)">
-                <i class="fa-brands fa-square-instagram"></i>
-            </a></li>
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit facebook page (open in new page)">
+                    <i class="fa-brands fa-square-facebook"></i>
+                </a></li>
+            <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit youtube page (open in new page)">
+                    <i class="fa-brands fa-square-youtube"></i>
+                </a></li>
+            <li><a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit twitter page (open in new page)">
+                    <i class="fa-brands fa-square-twitter"></i>
+                </a></li>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit instagram page (open in new page)">
+                    <i class="fa-brands fa-square-instagram"></i>
+                </a></li>
         </ul>
     </footer>
 
     <!--Adding font Awesome-->
-  <script src="https://kit.fontawesome.com/176b15ee89.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/176b15ee89.js" crossorigin="anonymous"></script>
 
 </body>
 
