Feat: Styling table for solar systems

--- a/solar.html
+++ b/solar.html
@@ -72,9 +72,9 @@
                 <h2>Solar System Components</h2>
             </div>
             <!--table with two columns part on left description on the right-->
-            <div>
+            <div id="components-container">
                 <div>
-                    <h3>For Photovoltaic (PV) systems</h3>
+                    <h3 class="text-center photovoltaic-system">A - Photovoltaic (PV) systems</h3>
                     <table id="components-table">
                         <thead>
                             <tr>
@@ -122,13 +122,14 @@
                                     including energy generation, system efficiency, and
                                     possible problems, is provided by monitoring devices.
                                     Control systems can automate specific tasks to maximise energy harvesting and system
-                                    efficiency.</td>
+                                    efficiency.
+                                </td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
                 <div>
-                    <h3>For Solar thermal systems</h3>
+                    <h3 class="text-center thermal-system">B - Solar thermal systems</h3>
                     <table id="components-table">
                         <thead>
                             <tr>
