Feat: Add wind turbine components and give the section an ID

--- a/wind.html
+++ b/wind.html
@@ -63,6 +63,75 @@
             <div>
             </div>
         </section>
+         <!--Components of selected system-->
+         <section id="wind-system-components">
+            <div class="title-center make-title-bolder top-bottom-margin">
+                <h2>Wind Turbine Components</h2>
+            </div>
+            <!--table with two columns part on left description on the right-->
+            <div id="components-container">
+                <div>
+                    <table id="components-table">
+                        <caption class="special-note">Following Components are the common parts but not all</caption>
+                        <thead>
+                            <tr>
+                                <td>Element</td>
+                                <td>Description</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Rotor Blades</td>
+                                <td>Long, aerodynamic blades 
+                                    are mounted on the <strong>rotor hub</strong>. These blades 
+                                    capture the kinetic energy of the wind.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Rotor Hub</td>
+                                <td>The rotor hub connects the blades 
+                                    to the main shaft and allows them to rotate.
+                                    It is positioned at the top of the tower.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Generator</td>
+                                <td>The generator converts the mechanical energy from the
+                                     rotating blades into electrical energy.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Gearbox</td>
+                                <td>a gearbox is used to increase the rotational speed of the rotor
+                                     to the higher speed needed for the generator.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Tower</td>
+                                <td>The tower supports the entire structure and elevates 
+                                    the rotor hub to a higher position.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Controller</td>
+                                <td>The controller monitors data from sensors and controls the turbine's operations,
+                                     adjusting the pitch (turn point) of the blades
+                                    for optimal performance and safety.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Brakes</td>
+                                <td>Mechanical or electrical brakes are installed
+                                    to stop the rotor in case of emergencies or during 
+                                    maintenance
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <!--Footer-->
