Feat: Styling the wind-system-container similarily to the solar system

--- a/wind.html
+++ b/wind.html
@@ -72,7 +72,7 @@
             <div id="components-container">
                 <div>
                     <table id="components-table">
-                        <caption class="special-note">Following Components are the common parts but not all</caption>
+                        <caption class="special-note"> <strong>Following Components are the common parts but not all</strong></caption>
                         <thead>
                             <tr>
                                 <td>Element</td>
